[package]
name = "enum-assoc"
version = "0.1.8"
license = "MIT OR Apache-2.0"
readme = "README.md"
authors = ["Griffin O'Neill <gsoneill1003@gmail.com>"]
edition = "2021"
description = """
Procedural macro to associate constants with enum variants.
"""
keywords = ["enum", "constant", "variant", "const"]
homepage = "https://github.com/Eolu/enum-assoc"
repository = "https://github.com/Eolu/enum-assoc"
categories = ["rust-patterns", "data-structures"]
documentation = "https://docs.rs/enum-assoc"

[lib]
proc-macro = true

[dependencies]
syn = "1.0"
quote = "1.0"
proc-macro2 = "1.0"
